evolver.css
@CHARSET "ISO-8859-1";

#frame {
	position: absolute;
	top: 40px;
	left: 40px;
	right: 40px;
	bottom: 40px;
	text-align: left;
	border: 3px rgb(0, 0, 0) solid;
	overflow: scroll;
}

#tabletop {
	position: absolute;
	left: 0;
	top: 0;
	width: 2000px;
	height: 2000px;
}

#canvas {
	position: absolute;
	/*border: 1px solid blue;*/
}

.qm {
	position: absolute;
	width: 70;
	height: 52;
	border: 1px rgb(0, 0, 0) solid;
}

.thumb {
	position: absolute;
	border: 1px rgb(0, 0, 255) solid;
	cursor: hand;
}

.tdiv {
	position: absolute;
	cursor: hand;
	width: 72px;
	height: 54px;
}

.mutated {
	/* border: 1px rgb(255, 127, 0) solid; */
}	

.delete {
	position: absolute;
	right: -2px;
	cursor: hand;
	z-index: 2;
}

.mutate {
	position: absolute;
	width: 14px;
	height: 14px;
	left: 1px;
	top: 1px;
	cursor: hand;
	z-index: 2;
}

#zoomer {
	position: absolute;
	display: none;
	z-index: 3;
}

#more {
	position: absolute;
	cursor: hand;
}

#msg {
	position: absolute;
	color: rgb(255, 120, 120);
}

.debugText {
	position: absolute;
	color: rgb(255, 0, 0);
	background-color: rgb(255, 255, 255);
	z-index: 2;
}

